# srill

./: Cargo.toml  LICENSE  README.md  srill.toml.example
.github/workflows/: ci.yml
src/: invoke.rs  lib.rs  main.rs  mode.rs  sub.rs
