[package]
name = "srill"
description = "Subscribe Redis and Invoke Lambda with cargo lambda, for Local development."
version = "0.3.1"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
md5 = "0.8.0"
redis = "0.32.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.4"
uuid = { version = "1.17.0", features = ["v4"] }
