[package]
name = "srill"
description = "Subscribe Redis and Invoke Lambda with cargo lambda, for Local development."
version = "1.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "srill"
path = "src/lib.rs"

[[bin]]
name = "srill"
path = "src/main.rs"

[features]
default = ["sqs"]
sqs = ["aws_lambda_events/sqs"]

[dependencies]
anyhow = "1.0.102"
aws_lambda_events = { version = "1.1.3", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
md5 = "0.8.0"
redis = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
uuid = { version = "1.23.1", features = ["v4"] }
